--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,37 @@
 
 @layer components {
   .container-custom {
-    @apply max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8;
+    @apply w-full mx-auto px-4;
+  }
+
+  @media (min-width: 640px) {
+    .container-custom {
+      @apply max-w-[640px] px-6;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .container-custom {
+      @apply max-w-[768px];
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .container-custom {
+      @apply max-w-[1024px] px-8;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .container-custom {
+      @apply max-w-[1280px];
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .container-custom {
+      @apply max-w-[1440px];
+    }
   }
 
   .btn-premium {
